@@ -14,6 +14,7 @@ Changes since 2.0.0-beta05:
 - Improved: On shopping list item page tap done on keyboard when in notes field to save item
 - Improved: On shopping list item page amount is prefilled with 1 (#406)
 - Improved: (not F-Droid) Suggestion popup for ML Kit scanner after 15 scans with ZXing
+- Improved: long lists are now displaying a vertical scrollbar
 - Fixed: Sorting of entries on master data pages (#463) (thanks @Turysaz)
 
 2.0.0-beta05:
